--- a/src/pages/home/Home.module.scss
+++ b/src/pages/home/Home.module.scss
@@ -1,3 +1,12 @@
 .home {
+    text-align: center;
+}
+
+.text {
     
+ font-size: 18px;
+text-align: center;
+color: #fffb00;
+margin-top: 0;
+margin-bottom: 20px;
 }
